<resources>
    <string name="app_name">TalkToME</string>
    <string name="login_et_username">User name</string>
    <string name="login_et_password">Password</string>
    <string name="login_in_button">Log in</string>
    <string name="nick_name_register">Nick name</string>
    <string name="upload_photo_register">Upload photo</string>
    <string name="register_button">Register</string>
    <string name="hey">hey</string>
    <string name="BaseUrl">http://10.0.2.2:7030/api/</string>

    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="login_name_hint">Name</string>
    <string name="login_mobile_number_hint">Mobile Number</string>
</resources>