<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterPageActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="50dp"
        android:paddingTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.018"
        tools:layout_editor_absoluteX="0dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="25dp"
            android:scaleX="3"
            android:scaleY="3"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <EditText
            android:id="@+id/editTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:hint="@string/login_et_username"
            android:inputType="textPersonName"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:hint="@string/nick_name_register"
            android:inputType="textPersonName"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:hint="@string/login_et_password"
            android:inputType="textPassword"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/editTextTextPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:hint="@string/login_et_password"
            android:inputType="textPassword"
            android:textSize="25dp" />

        <Button
            android:id="@+id/button_upload_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/black"
            android:text="@string/upload_photo_register" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="845dp"
            android:layout_height="wrap_content"
            android:text="Already registered? click here"
            android:textSize="23dp" />

        <Button
            android:id="@+id/register_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:padding="15dp"
            android:textSize="15sp"
            android:text="@string/register_button" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>