<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bk"
    android:focusableInTouchMode="true"
    tools:context=".MainActivity"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="55dp"
        android:paddingTop="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.352"
        tools:layout_editor_absoluteX="-38dp">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="45dp"
            android:scaleX="3"
            android:scaleY="3"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="25dp"
            android:backgroundTint="@color/tintColorUnderLine"
            android:ems="10"
            android:hint="@string/login_et_username"
            android:inputType="textPersonName"
            android:textSize="23dp" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:backgroundTint="@color/tintColorUnderLine"
            android:ems="10"
            android:hint="@string/login_et_password"
            android:inputType="textPassword"
            android:textSize="23dp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="845dp"
            android:layout_height="wrap_content"
            android:text="New User? click here"
            android:textSize="21dp" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_btn"
            style="@style/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:background="@drawable/login_button_bk"
            android:text="@string/login_in_button"
            android:theme="@style/loginButton" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>